--- a/realm-browser/src/main/res/layout/ac_realm_object.xml
+++ b/realm-browser/src/main/res/layout/ac_realm_object.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <include layout="@layout/app_bar"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
