--- a/realm-browser/src/main/res/layout/ac_realm_settings.xml
+++ b/realm-browser/src/main/res/layout/ac_realm_settings.xml
@@ -5,6 +5,8 @@
               android:paddingLeft="16dp"
               android:paddingRight="16dp">
 
+    <include layout="@layout/app_bar"/>
+
     <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/cbWrapText"
             android:layout_width="match_parent"
